# fermentation-fault-detection

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
fermfaultdetect/: model_evaluation.py  utils.py
fermfaultdetect/data/: make_dataset.py  preprocessing.py  statistics.py  utils.py
fermfaultdetect/fault_detect_models/: ml_models.py
fermfaultdetect/process_models/: fed_batch_model.py
fermfaultdetect/visualizations/: visualize.py
models/ANN_detect_thesis/: ann_oneclass_opt_penalty_metrics.csv  config.json  model.pth
models/ANN_diagnosis_FE_thesis/: ann_multclass_metrics.csv  config.json  model.pth
models/ANN_diagnosis_thesis/: ann_multclass_metrics.csv  config.json  model.pth
models/MPCA_Thesis_highalpha/: config.json  pca_test.csv
models/MPCA_Thesis_lowalpha/: config.json  pca_test.csv
models/PLSDA_Thesis/: config.json  model.pkl  pls_metrics.csv
models/SVM_Thesis/: model.pkl  svm_metrics.csv
notebooks/: extrapolation_comparison.ipynb  make_dataset.ipynb  model_evaluation.ipynb  visualize_dataset.ipynb
notebooks/Noise analysis/: Noise_data.csv  noise_analysis.ipynb
notebooks/Optimize_ML_models/: ANN_detect.ipynb  ANN_diagnosis.ipynb  MPCA.ipynb  PLS_fdm.ipynb  SVM_fdm.ipynb
